# ezinput

./: Cargo.toml  LICENSE.txt  README.md
.cargo/: config.toml
.github/workflows/: build.yml
examples/: enumerated.rs  multiplayer.rs  singleplayer.rs
macros/: Cargo.toml
macros/src/: lib.rs
scripts/: example-multiplayer.sh  example-singleplayer.sh  example.sh  tooling.sh
src/: binding.rs  bundle.rs  gamepad.rs  id.rs  keyboard.rs  labels.rs  lib.rs  macros.rs  mouse.rs  plugin.rs  prelude.rs  press_state.rs  receiver.rs  source.rs  state.rs  tick.rs  view.rs
tools/lint/: Cargo.toml
tools/lint/src/: main.rs
