[package]
name = "ezinput"
version = "0.3.5"
edition = "2021"
exclude = [".vscode/**", ".github/**", "scripts/**"]
description = "A powerful input-agnostic library targeting complete support to axis and button handling for the Bevy game engine."
license = "MIT"
repository = "https://github.com/eexsty/ezinput"
readme = "README.md"
keywords = ["bevy", "input"]
publish = true

[workspace]
resolver = "2"
members = ["./", "./macros", "./tools/lint"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "ezinput"
path = "src/lib.rs"

[dependencies]
bevy = { version = "^0.7", features = ["serialize", "render", "x11", "bevy_gilrs"], default-features = false }
serde = { version = "^1", features = ["derive"] }
ezinput_macros = { path = "./macros", version = "^0.2" }

[dev-dependencies]
itertools = "^0.10"

[[example]]
name = "singleplayer"
path = "examples/singleplayer.rs"

[[example]]
name = "multiplayer"
path = "examples/multiplayer.rs"
