[package]
name = "ezinput_macros"
version = "0.1.0"
edition = "2021"
description = "Macros for EZInput"
license = "MIT"
repository = "https://github.com/existentially/ezinput"
readme = "../README.md"
keywords = ["bevy", "input"]
publish = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
proc-macro = true

[dependencies]
syn = "1.0"
quote = "1.0"
